Update index.css (fix alignment/margins)

--- a/index.css
+++ b/index.css
@@ -32,8 +32,7 @@ body {
 }
 
 details {
-  width: 50%;
-  margin: 0 auto ;
+  width: 26%;
   margin-bottom: .5rem;
   box-shadow: 0 .1rem 1rem -.5rem rgba(0,0,0,.4);
   border-radius: 12px;
